부트스트랩 적용, html 템플릿화, 질문 등록,상세,리스트 완성
질문 등록 페이지는 유효성 검사 제작중. 아직 미완성

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="ko">
-	<head>
-		<meta charset="UTF-8" />
-		<title>index.html</title>
-	</head>
-	<body>
+<html layout:decorate="~{layout}">
+	<div layout:fragment="content" class="container">
 		<h1>Index.html</h1>
 		<p>메인 페이지입니다.</p>
 		<ul>
 			<li><a th:href="@{|/question/list|}">질문 목록으로 이동</a></li>
 		</ul>
-	</body>
+	</div>
 </html>
