--- a/src/main/resources/templates/question_form.html
+++ b/src/main/resources/templates/question_form.html
@@ -10,18 +10,20 @@
 	</div>
 	<div class="row">
 		<div class="col">
-			<form th:action="@{/question/create}" method="post">
+			<form th:action="@{/question/create}" method="post" th:object="${questionForm}">
+				<div th:replace="~{form_errors :: formErrorsFragment}"></div>
 				<div class="form-group">
 					<label for="subject">제목</label>
-					<input type="text" class="form-control" id="subject" name="subject">
+					<input type="text" class="form-control" th:field="*{subject}">
 				</div>
 				<div class="form-group">
 					<label for="content">내용</label>
-					<textarea class="form-control" id="content" name="content" rows="3"></textarea>
+					<textarea class="form-control" rows="3" th:field="*{content}"></textarea>
 				</div>
 				<button type="submit" class="btn btn-primary">등록</button>
 			</form>
 		</div>
 	</div>
 </div>
+
 </html>
