--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -3,7 +3,7 @@
 	<div class="row">
 		<div class="col">
 			<hr />
-			<h2 class="font-weight-bold">[[${question.id}]] :: [[${question.subject}]]</h2>
+			<h2 class="font-weight-bold">[[${question.subject}]]</h2>
 			<hr />
 			<div class="card">
 				<div class="card-body">
