--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -28,7 +28,8 @@
 							<a th:href="@{|/question/detail/${question.id}|}">
 								[[${question.subject}]]
 							</a>
-							<span class="text-danger" th:if="${#lists.size(question.answerList) > 0}" th:text="'['+${#lists.size(question.answerList)}+']'">
+							<span class="text-danger" th:if="${#lists.size(question.answerList) > 0}"
+								th:text="'['+${#lists.size(question.answerList)}+']'">
 							</span>
 						</td>
 						<td th:text="${question.formattedCreateDate}"></td>
