로그인, 로그아웃, 회원가입 추가. 보안설정중.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,9 @@
 		<h1>Index.html</h1>
 		<p>메인 페이지입니다.</p>
 		<ul>
-			<li><a th:href="@{|/question/list|}">질문 목록으로 이동</a></li>
+			<li><a th:href="@{/question/list}">질문 목록으로 이동</a></li>
+			<li><a th:href="@{/user/sign-in}">로그인으로 이동</a></li>
+			<li><a th:href="@{/user/sign-up}">회원가입으로 이동</a></li>
 		</ul>
 	</div>
 </html>
