--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,5 +1,5 @@
 <nav th:fragment="navbarFragment" class="navbar navbar-expand-md navbar-dark bg-dark">
-		<a class="navbar-brand" href="#">Navbar</a>
+		<a class="navbar-brand" th:href="@{/}">Navbar</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -16,13 +16,12 @@
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown"
 						aria-expanded="false">
-						Dropdown
+						사용자
 					</a>
 					<div class="dropdown-menu">
-						<a class="dropdown-item" href="#">Action</a>
-						<a class="dropdown-item" href="#">Another action</a>
-						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#">Something else here</a>
+						<a class="dropdown-item" sec:authorize="isAnonymous()" th:href="@{/user/sign-in}">로그인</a>
+						<a class="dropdown-item" sec:authorize="isAuthenticated()" th:href="@{/user/sign-out}">로그아웃</a>
+						<a class="dropdown-item" th:href="@{/user/sign-up}">회원가입</a>
 					</div>
 				</li>
 				<li class="nav-item">
