Security 설정 업데이트

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,7 @@
 			<li><a th:href="@{/question/list}">질문 목록으로 이동</a></li>
 			<li><a th:href="@{/user/sign-in}">로그인으로 이동</a></li>
 			<li><a th:href="@{/user/sign-up}">회원가입으로 이동</a></li>
+			<li><a th:href="@{/debug/auth}">[디버그] 계정 정보로 이동</a></li>
 		</ul>
 	</div>
 </html>
