--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -19,13 +19,17 @@
 						사용자
 					</a>
 					<div class="dropdown-menu">
-						<a class="dropdown-item" sec:authorize="isAnonymous()" th:href="@{/user/sign-in}">로그인</a>
-						<a class="dropdown-item" sec:authorize="isAuthenticated()" th:href="@{/user/sign-out}">로그아웃</a>
+						<div sec:authorize="isAnonymous()">
+							<a class="dropdown-item" th:href="@{/user/sign-in}">로그인</a>	
+						</div>
+						<div sec:authorize="isAuthenticated()">
+							<a class="dropdown-item" th:href="@{/user/sign-out}">로그아웃</a>
+						</div>
 						<a class="dropdown-item" th:href="@{/user/sign-up}">회원가입</a>
 					</div>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link disabled">Disabled</a>
+					<a class="nav-link disabled" sec:authentication="name"></a>
 				</li>
 			</ul>
 			<form class="form-inline my-2 my-lg-0">
