--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,5 +1,5 @@
 <nav th:fragment="navbarFragment" class="navbar navbar-expand-md navbar-dark bg-dark">
-		<a class="navbar-brand" th:href="@{/}">Navbar</a>
+		<a class="navbar-brand" th:href="@{/}">Spring Boot</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -7,11 +7,8 @@
 
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active">
-					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Link</a>
+					<a class="nav-link" th:href="@{/question/list}">질문 게시판</a>
 				</li>
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown"
@@ -23,18 +20,12 @@
 							<a class="dropdown-item" th:href="@{/user/sign-in}">로그인</a>	
 						</div>
 						<div sec:authorize="isAuthenticated()">
+							<a class="dropdown-item" th:href="@{/user/info}" sec:authentication="name"></a>
 							<a class="dropdown-item" th:href="@{/user/sign-out}">로그아웃</a>
 						</div>
 						<a class="dropdown-item" th:href="@{/user/sign-up}">회원가입</a>
 					</div>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link disabled" sec:authentication="name"></a>
-				</li>
 			</ul>
-			<form class="form-inline my-2 my-lg-0">
-				<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-			</form>
 		</div>
 	</nav>
