--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -7,6 +7,24 @@
 			<hr />
 			<div class="card">
 				<div class="card-body">
+					<div class="row mb-2">
+						<div th:if="${question.author != null}" class="col">
+							<span class="badge badge-light">
+								<i class="bi bi-person-circle"></i>
+								<span>
+									[[${question.author.username}]]
+								</span>
+							</span>
+						</div>
+						<div th:unless="${question.author != null}" class="col">
+							<span class="badge badge-light">
+								<i class="bi bi-pc-display"></i>
+								<span>
+									서버
+								</span>					
+							</span>
+						</div>
+					</div>
 					<div class="row">
 						<div class="col">
 							<p>[[${question.content}]]</p>
@@ -26,6 +44,24 @@
 			<h4 class="font-weight-bold">[[${#lists.size(question.answerList)}]]개의 답변이 있습니다.</h4>
 			<div class="card my-2" th:each="answer : ${question.answerList}">
 				<div class="card-body">
+					<div class="row mb-2">
+						<div th:if="${answer.author != null}" class="col">
+							<span class="badge badge-light">
+								<i class="bi bi-person-circle"></i>
+								<span>
+									[[${answer.author.username}]]
+								</span>
+							</span>
+						</div>
+						<div th:unless="${answer.author != null}" class="col">
+							<span class="badge badge-light">
+								<i class="bi bi-pc-display"></i>
+								<span>
+									서버
+								</span>					
+							</span>
+						</div>
+					</div>
 					<div class="row">
 						<div class="col d-flex justify-content-between align-items-center">
 							<span>[[${answer.content}]]</span>
@@ -41,7 +77,10 @@
 			<form class="d-flex flex-column" th:action="@{|/answer/create/${question.id}|}" method="post"
 				th:object="${answerForm}">
 				<div th:replace="~{form_errors :: formErrorsFragment}"></div>
-				<textarea class="form-control" cols="30" rows="10" th:field="*{content}"></textarea>
+				<textarea sec:authorize="isAnonymous()" disabled class="form-control" cols="30" rows="10"
+					th:field="*{content}" placeholder="로그인이 필요합니다!"></textarea>
+				<textarea sec:authorize="isAuthenticated()" class="form-control" cols="30" rows="10"
+					th:field="*{content}"></textarea>
 				<div class="row">
 					<div class="col d-flex justify-content-between my-2">
 						<input class="btn btn-secondary" type="submit" value="답변 등록" />
