--- a/src/main/resources/templates/answer_form.html
+++ b/src/main/resources/templates/answer_form.html
@@ -1,27 +1,20 @@
 <html layout:decorate="~{layout}">
 <div layout:fragment="content" class="container">
-	<div class="row d-flex justify-content-between align-items-center border-bottom my-4 pb-2">
+	<div class="row d-flex align-items-center border-bottom my-4 pb-2">
 		<div class="col d-flex justify-content-start align-items-center">
-			<h3>질문 등록</h3>
-		</div>
-		<div class="col d-flex justify-content-end align-items-center">
-			<a class="btn btn-info" th:href="@{/question/list}">목록으로 돌아가기</a>
+			<h3>답변 수정</h3>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col">
-			<form method="post" th:object="${questionForm}">
+			<form method="post" th:object="${answerForm}">
 				<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 				<div th:replace="~{form_errors :: formErrorsFragment}"></div>
-				<div class="form-group">
-					<label for="subject">제목</label>
-					<input type="text" class="form-control" th:field="*{subject}">
-				</div>
 				<div class="form-group">
 					<label for="content">내용</label>
 					<textarea class="form-control" rows="3" th:field="*{content}"></textarea>
 				</div>
-				<button type="submit" class="btn btn-primary">등록</button>
+				<button type="submit" class="btn btn-primary">수정</button>
 			</form>
 		</div>
 	</div>
