--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -21,7 +21,7 @@
 								<i class="bi bi-pc-display"></i>
 								<span>
 									서버
-								</span>					
+								</span>
 							</span>
 						</div>
 					</div>
@@ -32,7 +32,28 @@
 					</div>
 					<div class="row">
 						<div class="col d-flex justify-content-end align-items-center">
-							<span class="badge badge-pill badge-dark">[[${question.formattedCreateDate}]]</span>
+							<span th:if="${question.formattedModifyDate != null}"
+								class="badge badge-pill badge-warning">
+								수정 일자: [[${question.formattedModifyDate}]]
+							</span>
+							<span class="badge badge-pill badge-dark ml-2">
+								작성 일자: [[${question.formattedCreateDate}]]
+							</span>
+						</div>
+					</div>
+					<div class="row mt-2">
+						<div class="col d-flex justify-content-end align-items-center">
+							<a th:href="@{|/question/modify/${question.id}|}" sec:authorize="isAuthenticated()"
+								th:if="${question.author != null and #authentication.getPrincipal().getUsername() == question.author.username}"
+								class="btn btn-outline-primary">
+								수정
+							</a>
+							<a href="javascript:void(0);" th:data-uri="@{|/question/delete/${question.id}|}"
+								sec:authorize="isAuthenticated()"
+								th:if="${question.author != null and #authentication.getPrincipal().getUsername() == question.author.username}"
+								class="btn btn-outline-danger ml-2" id="delete">
+								삭제
+							</a>
 						</div>
 					</div>
 				</div>
@@ -58,14 +79,32 @@
 								<i class="bi bi-pc-display"></i>
 								<span>
 									서버
-								</span>					
+								</span>
 							</span>
 						</div>
 					</div>
 					<div class="row">
-						<div class="col d-flex justify-content-between align-items-center">
+						<div class="col d-flex align-items-center">
 							<span>[[${answer.content}]]</span>
-							<span class="badge badge-pill badge-dark">[[${answer.formattedCreateDate}]]</span>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col d-flex justify-content-end align-items-center">
+							<span th:if="${answer.formattedModifyDate != null}" class="badge badge-pill badge-warning">
+								수정 일자: [[${answer.formattedModifyDate}]]
+							</span>
+							<span class="badge badge-pill badge-dark ml-2">
+								작성 일자: [[${answer.formattedCreateDate}]]
+							</span>
+						</div>
+					</div>
+					<div class="row mt-2">
+						<div class="col d-flex justify-content-end align-items-center">
+							<a th:href="@{|/answer/modify/${answer.id}|}" sec:authorize="isAuthenticated()"
+								th:if="${answer.author != null and #authentication.getPrincipal().getUsername() == answer.author.username}"
+								class="btn btn-outline-primary">
+								수정
+							</a>
 						</div>
 					</div>
 				</div>
@@ -91,5 +130,13 @@
 		</div>
 	</div>
 </div>
+<script layout:fragment="script">
+	const deleteElements = document.getElementById("delete");
+	deleteElements.addEventListener("click", (event) => {
+		if (confirm("정말로 삭제하시겠습니까?")) {
+			location.href = event.target.dataset.uri;
+		}
+	});
+</script>
 
 </html>
