검색 기능 추가

--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -31,22 +31,6 @@
 							<p>[[${question.content}]]</p>
 						</div>
 					</div>
-					<!-- Like -->
-					<div class="row">
-						<div class="col d-flex justify-content-center align-items-center">
-							<a href="javascript:void(0)" th:data-uri="@{|/question/vote/${question.id}|}"
-								class="voteElements btn btn-primary d-flex align-items-center"
-								style="font-size: 1.25rem;">
-								<span class="mr-2 bi bi-arrow-up-circle" style="font-size: 1.3rem;"></span>
-								<span class="font-weight-bold">
-									추천
-								</span>
-								<span class="ml-2 font-weight-bold badge badge-pill badge-light" style="top: 0;">
-									[[${#lists.size(question.voter)}]]
-								</span>
-							</a>
-						</div>
-					</div>
 					<!-- Date -->
 					<div class="row mt-2">
 						<div class="col d-flex justify-content-end align-items-center">
@@ -62,9 +46,19 @@
 					<!-- Feature -->
 					<div class="row mt-2">
 						<div class="col d-flex justify-content-end align-items-center">
+							<a href="javascript:void(0)" th:data-uri="@{|/question/vote/${question.id}|}"
+								class="voteElements btn btn-outline-success d-flex align-items-center">
+								<span class="mr-2 bi bi-arrow-up-circle"></span>
+								<span class="font-weight-bold">
+									추천
+								</span>
+								<span class="ml-2 font-weight-bold badge badge-pill badge-light border border-success" style="top: 0;">
+									[[${#lists.size(question.voter)}]]
+								</span>
+							</a>
 							<a th:href="@{|/question/modify/${question.id}|}" sec:authorize="isAuthenticated()"
 								th:if="${question.author != null and #authentication.getPrincipal().getUsername() == question.author.username}"
-								class="btn btn-outline-primary">
+								class="btn btn-outline-primary ml-2">
 								수정
 							</a>
 							<a href="javascript:void(0);" th:data-uri="@{|/question/delete/${question.id}|}"
@@ -84,6 +78,8 @@
 		<div class="col">
 			<h4 class="font-weight-bold">[[${#lists.size(question.answerList)}]]개의 답변이 있습니다.</h4>
 			<div class="card my-2" th:each="answer : ${question.answerList}">
+				<!-- Anchor -->
+				<a th:id="|answer_${answer.id}|"></a>
 				<div class="card-body">
 					<!-- User -->
 					<div class="row mb-2">
@@ -110,22 +106,6 @@
 							<span>[[${answer.content}]]</span>
 						</div>
 					</div>
-					<!-- Like -->
-					<div class="row">
-						<div class="col d-flex justify-content-center align-items-center">
-							<a href="javascript:void(0)" th:data-uri="@{|/answer/vote/${answer.id}|}"
-								class="voteElements btn btn-primary d-flex align-items-center"
-								style="font-size: 1.25rem;">
-								<span class="mr-2 bi bi-arrow-up-circle" style="font-size: 1.3rem;"></span>
-								<span class="font-weight-bold">
-									추천
-								</span>
-								<span class="ml-2 font-weight-bold badge badge-pill badge-light" style="top: 0;">
-									[[${#lists.size(answer.voter)}]]
-								</span>
-							</a>
-						</div>
-					</div>
 					<!-- Date -->
 					<div class="row">
 						<div class="col d-flex justify-content-end align-items-center">
@@ -140,9 +120,19 @@
 					<!-- Feature -->
 					<div class="row mt-2">
 						<div class="col d-flex justify-content-end align-items-center">
+							<a href="javascript:void(0)" th:data-uri="@{|/answer/vote/${answer.id}|}"
+								class="voteElements btn btn-outline-success d-flex align-items-center">
+								<span class="mr-2 bi bi-arrow-up-circle"></span>
+								<span class="font-weight-bold">
+									추천
+								</span>
+								<span class="ml-2 font-weight-bold badge badge-pill badge-light border border-success" style="top: 0;">
+									[[${#lists.size(answer.voter)}]]
+								</span>
+							</a>
 							<a th:href="@{|/answer/modify/${answer.id}|}" sec:authorize="isAuthenticated()"
 								th:if="${answer.author != null and #authentication.getPrincipal().getUsername() == answer.author.username}"
-								class="btn btn-outline-primary">
+								class="btn btn-outline-primary ml-2">
 								수정
 							</a>
 							<a href="javascript:void(0);" th:data-uri="@{|/answer/delete/${answer.id}|}"
